removed precipitation from metrics

--- a/src/index.html
+++ b/src/index.html
@@ -21,22 +21,21 @@
   </div>
 <table class="five columns">
   <tr>
-    <td><span class="fore">Forecast</span></td>
-    <td class = "day">Day</td>
-    <td class = "win">Wind(MPH)</td>
-    <td class = "humi">Humidity</td>
-    <td class = "tempf">TempºF</td>
-    <td class = "tempc">TempºC</td>
-    <td class = "prec">Precipitation (.in)</td>
+    <td><span class="theader fore">Forecast</span></td>
+    <td class = "theader day">Day</td>
+    <td class = "theader win">Wind(MPH)</td>
+    <td class = "theader humi">Humidity</td>
+    <td class = "theader tempf">TempºF</td>
+    <td class = "theader tempc">TempºC</td>
   </tr>
   <tr>
-    <td><span class="city">City</span></td>
-    <td class = "sky">Sky</td>
-    <td class = "win">Wind(MPH)</td>
-    <td class = "humi">Humidity</td>
-    <td class = "tempf">TempºF</td>
-    <td class = "tempc">TempºC</td>
-    <td class = "prec">Today Precipitation (.in)</td>
+    <td><span class="theader city">City</span></td>
+    <td class = "theader sky">Sky</td>
+    <td class = "theader win">Wind(MPH)</td>
+    <td class = "theader humi">Humidity</td>
+    <td class = "theader tempf">TempºF</td>
+    <td class = "theader tempc">TempºC</td>
+    <td class = "theader prec">Today Precipitation (.in)</td>
   </tr>
   </table>
    <script src="js/main.js"></script>
