fixed spelling error

--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,13 @@
    <meta charset="utf-8">
    <meta http-equiv="x-ua-compatible" content="ie=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <title>Weatherpalooza</title>
+   <title>Can we ride?!</title>
    <link rel="stylesheet" href="css/Skeleton-2.0.4/css/skeleton.css">
    <link rel="stylesheet" href="css/main.css">
 </head>
  <body>
    <div>
-     <h1>Can we ride today!?</h1>
+     <h1>Can we ride today?!</h1>
    </div>
   <div class="four columns">
     <button class="lookup">Search by Zip</button>
